2010-03-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c:
   Make adding string and string vector settings initialise the setting
   to NULL for safety.
 * src/utils.c, src/stash.c, src/stash.h, doc/stash-example.c:
   Add stash_group_load_from_file() and stash_group_save_to_file().


2010-03-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetypes.common:
   Set default for wrapped lines to show marker at end of line only
   (more expected and doesn't change line alignment - closes #2972386).
 * src/toolbar.c, src/toolbar.h, src/prefs.c, src/prefs.h,
   src/pluginutils.c, doc/plugins.dox:
   Improve API docs contents page by listing all commonly-used files.
   Fix 'Date' appearing twice on the date line.
   Don't generate API docs for prefs.h, toolbar.h (unused).
   Move some '@file' doc-comments to the .c file.
 * src/interface.c, geany.glade:
   Add frame for 'Printing' prefs dialog page.
 * src/sidebar.c, src/project.c, src/prefs.c, src/stash.c, src/stash.h,
   src/keyfile.c, src/keyfile.h, src/search.c, src/plugins.c,
   doc/stash-example.c:
   Rename Stash data types to be independently named from Geany (so
   Stash can be reused for other projects).
   Rename GeanyPrefGroup to StashGroup.


2010-03-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/python.c:
   Apply patch from Colomban Wendling to parse Python lambda functions
   (thanks) - modified to only parse toplevel or class member lambdas.
 * src/stash.c, src/stash.h, doc/Doxyfile.in, doc/Makefile.am,
   doc/stash-example.c:
   Add doc-comments for Stash setting functions.
   Add an example file showing usage of Stash.
   (Not enabled yet until added to the plugin API).


2010-03-17  Lex Trotman  <elextr.at.gmail.dot.com>

 * src/build.c:
   Fix using return value without checking return status, caused
   incorrect sensitivity settings on build dialog.

